--- a/core/src/bms/player/beatoraja/launcher/LauncherStyle.css
+++ b/core/src/bms/player/beatoraja/launcher/LauncherStyle.css
@@ -1,13 +1,29 @@
+.optionOuterBox {
+    -fx-vgap: 10px;
+    -fx-hgap: 10px;
+    -fx-column-halignment: right;
+    -fx-padding: 25px;
+}
+
 .optionGrid {
     -fx-vgap: 10px;
     -fx-hgap: 10px;
     -fx-column-halignment: right;
     -fx-padding: 25px;
 }
-.optionHeader {
-    -fx-font-size: 16px;
-    -fx-font-style: oblique;
-}
-.optionLabel {
 
+.optionHeader {
+    -fx-graphic-text-gap: 8px;
+}
+
+.optionLabel {
+    -fx-font-size: 14px;
+}
+
+.list-view .list-cell {
+    -fx-cell-size: -1px;
+}
+
+.table-view .table-row-cell {
+    -fx-cell-size: -1px;
 }
