--- a/core/src/bms/player/beatoraja/launcher/VideoConfigurationView.fxml
+++ b/core/src/bms/player/beatoraja/launcher/VideoConfigurationView.fxml
@@ -1,77 +1,109 @@
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.SpinnerValueFactory.IntegerSpinnerValueFactory?>
-<?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.control.Spinner?>
+<?xml version="1.0" encoding="UTF-8"?>
+
+<?import atlantafx.base.controls.*?>
 <?import bms.player.beatoraja.launcher.NumericSpinner?>
-
-<?import java.lang.String?>
-
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.collections.FXCollections?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.VBox?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import java.lang.*?>
 <?import java.net.URL?>
-<?import javafx.scene.control.ScrollPane?>
-<ScrollPane xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bms.player.beatoraja.launcher.VideoConfigurationView">
-    <GridPane styleClass="optionGrid">
-        <Label text="%DISPLAY" GridPane.rowIndex="0" GridPane.columnIndex="0" GridPane.columnSpan="2" styleClass="optionHeader"/>
+<ScrollPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="bms.player.beatoraja.launcher.VideoConfigurationView">
 
-        <Label text="%DISPLAYMODE" GridPane.rowIndex="1" GridPane.columnIndex="0" styleClass="optionLabel"/>
-        <ComboBox fx:id="displayMode" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+    <!--    <GridPane styleClass="optionGrid">-->
+    <VBox minWidth="500" styleClass="optionOuterBox" spacing="2">
 
-        <Label text="%RESOLUTION" GridPane.rowIndex="2" GridPane.columnIndex="0" styleClass="optionLabel"/>
-        <ComboBox fx:id="resolution" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
-
-        <Label text="%MONITOR" GridPane.rowIndex="3" GridPane.columnIndex="0" styleClass="optionLabel"/>
-        <ComboBox fx:id="monitor" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
-
-        <Label text="%VSYNC" GridPane.rowIndex="4" GridPane.columnIndex="0" styleClass="optionLabel"/>
-        <CheckBox fx:id="vSync" mnemonicParsing="false" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
-
-        <Label text="%MAXFPS" GridPane.rowIndex="5" GridPane.columnIndex="0" styleClass="optionLabel"/>
-        <NumericSpinner fx:id="maxFps" editable="true" GridPane.rowIndex="5" GridPane.columnIndex="1">
-            <valueFactory>
-                <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="60" max="1000" min="0"/>
-            </valueFactory>
-        </NumericSpinner>
-
-        <Label text="%BGA" GridPane.rowIndex="6" GridPane.columnIndex="0" GridPane.columnSpan="2" styleClass="optionHeader"/>
-
-        <Label text="%BGA" GridPane.rowIndex="7" GridPane.columnIndex="0" styleClass="optionLabel"/>
-        <ComboBox fx:id="bgaOp" GridPane.rowIndex="7" GridPane.columnIndex="1">
-            <items>
-                <FXCollections fx:factory="observableArrayList">
-                    <String fx:value="On"/>
-                    <String fx:value="Auto"/>
-                    <String fx:value="Off"/>
-                </FXCollections>
-            </items>
-        </ComboBox>
-
-        <Label text="%MISSLAYER_DURATION" GridPane.rowIndex="8" GridPane.columnIndex="0" styleClass="optionLabel">
-            <tooltip>
-                <Tooltip text="Set miss layer display time (ms)" textAlignment="CENTER"/>
-            </tooltip>
+        <Label styleClass="optionHeader, accent, title-1" text="%DISPLAY">
+            <graphic>
+                <FontIcon iconLiteral="mdal-computer"/>
+            </graphic>
         </Label>
-        <NumericSpinner fx:id="missLayerTime" editable="true" GridPane.rowIndex="8" GridPane.columnIndex="1">
-            <valueFactory>
-                <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="500" max="10000" min="0"/>
-            </valueFactory>
-        </NumericSpinner>
 
-        <Label text="%BGA_EXPAND" GridPane.rowIndex="9" GridPane.columnIndex="0" styleClass="optionLabel"/>
-        <ComboBox fx:id="bgaExpand" GridPane.rowIndex="9" GridPane.columnIndex="1">
-            <items>
-                <FXCollections fx:factory="observableArrayList">
-                    <String fx:value="Full"/>
-                    <String fx:value="Keep Aspect Ratio"/>
-                    <String fx:value="Off"/>
-                </FXCollections>
-            </items>
-        </ComboBox>
+        <Tile title="%DISPLAYMODE" styleClass="optionLabel">
+            <action>
+                <ComboBox fx:id="displayMode"/>
+            </action>
+        </Tile>
+
+        <Tile title="%RESOLUTION" styleClass="optionLabel">
+            <action>
+                <ComboBox fx:id="resolution"/>
+            </action>
+        </Tile>
+
+        <Tile title="%MONITOR" styleClass="optionLabel">
+            <action>
+                <ComboBox fx:id="monitor"/>
+            </action>
+        </Tile>
+
+        <Tile title="%VSYNC" styleClass="optionLabel">
+            <action>
+                <ToggleSwitch fx:id="vSync"/>
+            </action>
+        </Tile>
+
+        <Tile title="%MAXFPS" styleClass="optionLabel">
+            <action>
+                <NumericSpinner fx:id="maxFps" editable="true">
+                    <valueFactory>
+                        <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="60" max="1000"
+                                                                        min="0"/>
+                    </valueFactory>
+                </NumericSpinner>
+            </action>
+        </Tile>
+
+        <Label styleClass="optionHeader, accent, title-1" text="%BGA">
+            <graphic>
+                <FontIcon iconLiteral="mdmz-video_settings"/>
+            </graphic>
+        </Label>
+
+        <Tile title="%BGA" styleClass="optionLabel">
+            <action>
+                <ComboBox fx:id="bgaOp">
+                    <items>
+                        <FXCollections fx:factory="observableArrayList">
+                            <String fx:value="On"/>
+                            <String fx:value="Auto"/>
+                            <String fx:value="Off"/>
+                        </FXCollections>
+                    </items>
+                </ComboBox>
+            </action>
+        </Tile>
+
+        <Tile title="%MISSLAYER_DURATION" styleClass="optionLabel">
+            <action>
+                <NumericSpinner fx:id="missLayerTime" editable="true">
+                    <valueFactory>
+                        <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="500"
+                                                                        max="10000"
+                                                                        min="0"/>
+                    </valueFactory>
+                </NumericSpinner>
+            </action>
+        </Tile>
+
+
+        <Tile title="%BGA_EXPAND" styleClass="optionLabel">
+            <action>
+                <ComboBox fx:id="bgaExpand">
+                    <items>
+                        <FXCollections fx:factory="observableArrayList">
+                            <String fx:value="Full"/>
+                            <String fx:value="Keep Aspect Ratio"/>
+                            <String fx:value="Off"/>
+                        </FXCollections>
+                    </items>
+                </ComboBox>
+            </action>
+        </Tile>
 
         <stylesheets>
             <URL value="@LauncherStyle.css"/>
         </stylesheets>
-    </GridPane>
+    </VBox>
 </ScrollPane>
